Better version- added CheckPlace method
'CheckPlace' method check by the list if the user typed a correct number