@@ -21,7 +21,19 @@ public class Main {
         }
         System.out.println();
     }*/
+        List<Integer> PossiblePlaces = new ArrayList<>();
+        PossiblePlaces.add(1);
+        PossiblePlaces.add(2);
+        PossiblePlaces.add(3);
+        PossiblePlaces.add(4);
+        PossiblePlaces.add(5);
+        PossiblePlaces.add(6);
+        PossiblePlaces.add(7);
+        PossiblePlaces.add(8);
+        PossiblePlaces.add(9);
+        //List <Integer> PossiblePlaces = List.of(1, 2, 3,4,5,6,7,8,9); //nie dziala bo elementow utworzonych przez list.of nie mozna zmieniac (np remove w funkcji CheckPlace)
         System.out.println("Choose position 1-9: ");
+
         for (int i = 0; i < gameboard.length; i++) {
             for (int j = 0; j < gameboard.length; j++) {
                 System.out.print(gameboard[i][j]);
@@ -34,7 +46,7 @@ public class Main {
             else
                 symbol = 'X';
             System.out.println(symbol+" moves\n");
-            PlaceXO(gameboard);
+            PlaceXO(gameboard,PossiblePlaces);
             //System.out.println("Choose position 1-9: ");
             for (int i = 0; i < gameboard.length; i++) {
                 for (int j = 0; j < gameboard.length; j++) {
@@ -58,14 +70,14 @@ public class Main {
 
     public static String winner() {
 
-        List horiz1 = List.of(1, 2, 3);  //wygrywające opcje
-        List horiz2 = List.of(4, 5, 6);
-        List horiz3 = List.of(7, 8, 9);
-        List vert1 = Arrays.asList(1, 4, 7);
-        List vert2 = Arrays.asList(2, 5, 8);
-        List vert3 = Arrays.asList(3, 6, 9);
-        List diag1 = Arrays.asList(1, 5, 9);
-        List diag2 = Arrays.asList(3, 5, 7);
+        List <Integer> horiz1 = List.of(1, 2, 3);  //wygrywające opcje
+        List <Integer> horiz2 = List.of(4, 5, 6);
+        List <Integer> horiz3 = List.of(7, 8, 9);
+        List <Integer> vert1 = Arrays.asList(1, 4, 7);
+        List <Integer> vert2 = Arrays.asList(2, 5, 8);
+        List <Integer> vert3 = Arrays.asList(3, 6, 9);
+        List <Integer> diag1 = Arrays.asList(1, 5, 9);
+        List <Integer> diag2 = Arrays.asList(3, 5, 7);
 
         List<List> win = new ArrayList<>();
         win.add(horiz1);
@@ -89,15 +101,18 @@ public class Main {
         }
         return winner;
     }
-    public static void PlaceXO(char[][] gameboard){
-        List<Integer> PossiblePlaces = List.of(1,2,3,4,5,6,7,8,9);
+    public static void PlaceXO(char[][] gameboard,List<Integer> PossiblePlaces){
         Scanner scan = new Scanner(System.in);
-        int pos = scan.nextInt();
-        boolean ifcontains = PossiblePlaces.contains(pos);
-        while(ifcontains==false){
-            System.out.println("Enter a number 1-9!");
-            break;
+        int pos;
+        while(true){
+            pos= scan.nextInt();
+            boolean check=CheckPlace(pos,PossiblePlaces);
+            if(!check)
+            System.out.println("Wrong field!");
+            else
+                break;
         }
+
         switch (pos) {
             case 1:
                 gameboard[0][0] = symbol;
@@ -127,12 +142,21 @@ public class Main {
                 gameboard[4][4] = symbol;
                 break;
         }
-            if(symbol=='X')
-                XPos.add(pos);
+
+
+           if(symbol=='X')
+                 XPos.add(pos);
             if(symbol=='O')
                 OPos.add(pos);
-
         }
+    public static boolean CheckPlace(int pos,List<Integer> PossiblePlaces){
+       boolean checkedplace=false;
+       if (PossiblePlaces.contains(pos))
+           checkedplace=true;
+        PossiblePlaces.remove(Integer.valueOf(pos));
+        //System.out.println(PossiblePlaces);
+        return checkedplace;
+    }
     }
 
 
